src/objects/SH_Account_Role_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related account role</description>
        <label>Account Role</label>
        <referenceTo>Account_Role__c</referenceTo>
        <relationshipName>SH_Account_Role_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Also_Known_As__c</fullName>
        <label>Also Known As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Studies_Pilots__c</fullName>
        <description>Case studies and pilots</description>
        <label>Case Studies / Pilots</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Description__c</fullName>
        <description>Description of the company</description>
        <label>Company Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Name of the company</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition_Competitors__c</fullName>
        <description>Competitors in the same field area</description>
        <label>Competition / Competitors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitive_Advantage__c</fullName>
        <description>Advantages over the competition</description>
        <label>Competitive Advantage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Contact Email</description>
        <label>Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <description>Contact Phone Number</description>
        <label>Contact Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Position__c</fullName>
        <description>Contact Position</description>
        <label>Contact Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SH_Account_Role_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_info_of_startup__c</fullName>
        <description>Contact information of startup</description>
        <label>Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>History of the company</description>
        <label>Company History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Focus_Areas__c</fullName>
        <description>Fields of action</description>
        <label>Industry Focus Areas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Finance / Payment</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Safety and Security</fullName>
                </value>
                <value>
                    <fullName>Flight Operations</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Sanitation</fullName>
                </value>
                <value>
                    <fullName>Airports</fullName>
                </value>
                <value>
                    <fullName>Quality / Risk</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Network Planning</fullName>
                </value>
                <value>
                    <fullName>Revenue Management</fullName>
                </value>
                <value>
                    <fullName>Slots</fullName>
                </value>
                <value>
                    <fullName>Environment and Sustainability</fullName>
                </value>
                <value>
                    <fullName>Ground Operations</fullName>
                </value>
                <value>
                    <fullName>Fuel</fullName>
                </value>
                <value>
                    <fullName>Passenger Experience</fullName>
                </value>
                <value>
                    <fullName>Cargo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Founding_Date__c</fullName>
        <description>Founding Year</description>
        <label>Founding Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Founding_Year_Display__c</fullName>
        <description>Founding Year displayed in the portal</description>
        <formula>TEXT(Founding_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Founding Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Amount__c</fullName>
        <description>Amount of funding in us dollars</description>
        <label>Funding Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Rounds__c</fullName>
        <description>Rounds of funding</description>
        <label>Funding Rounds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Stage__c</fullName>
        <description>Stages of funding</description>
        <label>Funding Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-seed</fullName>
                </value>
                <value>
                    <fullName>Seed</fullName>
                </value>
                <value>
                    <fullName>Series A</fullName>
                </value>
                <value>
                    <fullName>Series B</fullName>
                </value>
                <value>
                    <fullName>Series C</fullName>
                </value>
                <value>
                    <fullName>Series D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GitHub__c</fullName>
        <label>GitHub</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IATA_Touchpoints__c</fullName>
        <description>IATA contact points(deprecated)</description>
        <label>IATA touchpoints(deprecated)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accelerate@IATA</fullName>
                </value>
                <value>
                    <fullName>Hackathon</fullName>
                </value>
                <value>
                    <fullName>Implementation Forum</fullName>
                </value>
                <value>
                    <fullName>Strategic Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Perspectives__c</fullName>
        <description>Industry Perspectives</description>
        <label>Industry Perspectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Instagram__c</fullName>
        <description>Link for the instagram profile</description>
        <label>Instagram</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <description>Observations</description>
        <label>Internal Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Investors__c</fullName>
        <description>Investors</description>
        <label>Investors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <description>Company Legal Name</description>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Social_Media_Accounts__c</fullName>
        <label>Link to Social Media accounts</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Country</description>
        <label>Location</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipName>SH_Account_Role_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logo_File_Id__c</fullName>
        <description>Logo id for the static resource</description>
        <label>Logo File Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <description>Logo</description>
        <formula>IMAGE(&apos;/sfc/servlet.shepherd/version/download/&apos; + Logo_File_Id__c, &quot;&quot;,-1,220)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marked_For_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the submit is rejected and contains internal comments.</description>
        <label>Marked For Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Of_Employees__c</fullName>
        <description>Number of employees</description>
        <label>Number Of Employees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-10</fullName>
                </value>
                <value>
                    <fullName>11-30</fullName>
                </value>
                <value>
                    <fullName>31-50</fullName>
                </value>
                <value>
                    <fullName>50+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks if the provider/consumer is published in the portal</description>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recent_News__c</fullName>
        <description>Recent News</description>
        <label>Recent News</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <description>Solution</description>
        <label>Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Current status of the provider/consumer</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tags_Of_Categories__c</fullName>
        <description>Categories</description>
        <label>IATA Touchpoints</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hackathon</fullName>
                </value>
                <value>
                    <fullName>Accelerate@IATA</fullName>
                </value>
                <value>
                    <fullName>NDC Certified</fullName>
                </value>
                <value>
                    <fullName>Strategic Partner</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Finance / Payment</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Safety and Security</fullName>
                </value>
                <value>
                    <fullName>Flight Operations</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Sanitation</fullName>
                </value>
                <value>
                    <fullName>Airports</fullName>
                </value>
                <value>
                    <fullName>Quality / Risk</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Network Planning</fullName>
                </value>
                <value>
                    <fullName>Revenue Management</fullName>
                </value>
                <value>
                    <fullName>Slots</fullName>
                </value>
                <value>
                    <fullName>Environment and Sustainability</fullName>
                </value>
                <value>
                    <fullName>Ground Operations</fullName>
                </value>
                <value>
                    <fullName>Fuel</fullName>
                </value>
                <value>
                    <fullName>Passenger Experience</fullName>
                </value>
                <value>
                    <fullName>Cargo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Artificial Intelligence</fullName>
                </value>
                <value>
                    <fullName>Machine Learning</fullName>
                </value>
                <value>
                    <fullName>Deep Learning</fullName>
                </value>
                <value>
                    <fullName>Big Data</fullName>
                </value>
                <value>
                    <fullName>APIs</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Predictive Analytics</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                </value>
                <value>
                    <fullName>Reservations</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>IOT</fullName>
                </value>
                <value>
                    <fullName>Marketplace</fullName>
                </value>
                <value>
                    <fullName>Insurtech</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telegram__c</fullName>
        <label>Telegram</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>SH Account Role Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Consumers</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SH_Account_Role_Detail__c.Consumer,SH_Account_Role_Detail__c.Consumer_and_Provider</value>
        </filters>
        <label>All Consumers</label>
    </listViews>
    <listViews>
        <fullName>Draft</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Draft</label>
    </listViews>
    <listViews>
        <fullName>For_Approval</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Submitted</label>
    </listViews>
    <listViews>
        <fullName>Providers</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SH_Account_Role_Detail__c.Provider,SH_Account_Role_Detail__c.Consumer_and_Provider</value>
        </filters>
        <label>All Providers</label>
    </listViews>
    <listViews>
        <fullName>Providers_to_Publish</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Published__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Providers to Publish</label>
    </listViews>
    <listViews>
        <fullName>Published_Providers</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Published__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Published Providers</label>
    </listViews>
    <nameField>
        <displayFormat>IHARD-{000000}</displayFormat>
        <label>Startup Hotlist Account Role Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SH Account Role Details</pluralLabel>
    <recordTypes>
        <fullName>Consumer</fullName>
        <active>true</active>
        <label>Consumer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consumer_and_Provider</fullName>
        <active>true</active>
        <label>Consumer&amp;Provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>Provider</fullName>
        <active>true</active>
        <label>Provider</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>canPublish</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Status__c, &apos;Approved&apos;)),Published__c,ISCHANGED(Published__c))</errorConditionFormula>
        <errorMessage>This provider profile cannot be published because it&apos;s not approved.</errorMessage>
    </validationRules>
</CustomObject>